<resources>
    <string name="app_name">Greeting 2022</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="say_hello">Say hello</string>
    <string name="greeting">Hello %s!</string>
    <string name="greetingg">Hello %1$s, you have %2$d!</string>
    <string name="cancel">Cancel</string>
    <string name="accept">accept</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_last_name">enter_your_last_name</string>
    <string name="enter_your_first_name">enter_your_first_name</string>
    <string name="username">Enter username</string>
    <string name="password">Enter password</string>

    <plurals name="greting">
        <item quantity="other">Name %1$s, you are %2$d old and surname %3$s!</item>
    </plurals>
</resources>